fix footer & custom scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,19 @@
-.btn,
-.jumbotron,
-.nav :hover {
-  border-radius: 0px;
+html,body {
+  height: 100%;
 }
 
-/* body {
-  background: #343a40;
-} */
+#root {
+  display: flex;
+  flex-direction: column;
+
+  min-height: 100%;
+}
+
+body::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.12);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.26);
+  border-radius: 5rem;
+}
